# SmartCalc

./: .gitignore  CMakeLists.txt  README.md
pics/: calc_expression  expression_with_x  plot_example
src/: Makefile  docs.tex  exec.tgz  main.c  s21_smart_calc.h
src/s21_calculate/: s21_calc_rpn.c  s21_calculate.h  s21_draw.c  s21_make_rpn.c  s21_parser.c  s21_rpn_calc.c  s21_rpolish_notation.c
src/s21_gtk_gui/: s21_gtk_gui.h  s21_mw_callbacks.c  s21_mw_markdown.c  s21_mw_signals.c
src/s21_structs/: s21_queue.c  s21_stack.c  s21_structs.h
src/tests/: s21_tests.h  test_main.c  test_s21_draw.c  test_s21_parses.c  test_s21_rpn_calc.c
